--- a/style.css
+++ b/style.css
@@ -6,3 +6,43 @@
     width: 100%;
     height: 500px;
 }
+
+#sideMenu {
+
+    width: 40%;
+    margin-left: -100%;
+}
+
+.open {
+    animation-name: slideIn;
+    animation-duration: 2s;
+}
+
+.close {
+    animation-name: slideOut;
+    animation-duration: 2s;
+}
+
+.content {
+    display: flex;
+}
+
+
+@keyframes slideIn {
+    from {
+        margin-left: -100%;
+    }
+    to {
+        margin-left: 0;
+    }
+}
+
+@keyframes slideOut {
+    from {
+        margin-left: 0;
+    }
+    to {
+
+        margin-left: -100%;
+    }
+}
